--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,6 @@
-Flask
+flask
 gunicorn
-opencv-python==4.6.0.66
-opencv-contrib-python==4.6.0.66
+opencv-python
+opencv-contrib-python
 ultralytics
 paddleocr
-attrdict
-beautifulsoup4
-cython
-fire
-pdf2docx
-PyMuPDF==1.20.2
-python-docx
-rapidfuzz
-visualdl
