--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,5 @@ gunicorn
 opencv-python
 opencv-contrib-python
 ultralytics
-paddleocr
-paddlepaddle==2.6.2
-
+paddleocr==2.6.1.3
+paddlepaddle==2.5.1
