--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 flask
 gunicorn
-opencv-python
-opencv-contrib-python
 ultralytics
 paddleocr==2.6.1.3
 paddlepaddle==2.5.1
+numpy==1.23.5
+opencv-python-headless==4.7.0.72
